# 2025-Interactifs-Gestion

./: .current_branch  .gitignore  .pr_marker  .pre-commit-config.yaml  AUDIT_COMPREHENSIVE_SUMMARY.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CONTRIBUTING.md  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INVASIVE_RESTORATION_SUMMARY.md  LICENSE  PR_COMPLETION_SUMMARY.md  PR_DELIVERABLES.md  PR_DESCRIPTION.md  PR_INSTRUCTIONS.md  PR_SUMMARY.md  README.md  TEST_RESULTS.md  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  structure_export.txt  verify_row_conversions.py
db/: association.bak.20251104_074946.db  association.bak.20251104_075254.db  association.db  db.py  lock.py  schema_hints.yaml
docs/: DB_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  PR_CHANGES_SUMMARY.md  STOCK_AND_UNITE_CHANGES.md  STOCK_MIGRATION_GUIDE.md
exports/: __init__.py  export_bilan_argumente.py  exports.py
lib/: db_articles.py
migrations/: 0001_add_commentaire_buvette_inventaire_lignes.sql  README.md
modules/: buvette.py  buvette_bilan_db.py  buvette_bilan_dialogs.py  buvette_db.py  buvette_inventaire_db.py  buvette_inventaire_dialogs.py  buvette_mouvements_db.py  cloture_exercice.py  db_api.py  db_row_utils.py  event_modules.py  exports.py  journal.py  stock_db.py  stock_tab.py
reports/: AUTOMATION_SKIPPED_FILES.md  BUVETTE_FIXES_SUMMARY.md  CHANGE_LOG.md  COLUMN_REMOVAL_CANDIDATES.md  COLUMN_REMOVAL_CANDIDATES_BUVETTE.md  COLUMN_REMOVAL_CANDIDATES_updated.md  EXPORTS_CENTRALIZATION_CANDIDATES.md  EXPORTS_CENTRALIZATION_REPORT.md  TODOs.md  (+20 more)
(+56 files in other folders)
